# glinit

./: .gitignore  CMakeLists.txt  README  README.md  makefile  opengl_project.sublime-project
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: imgui_impl_opengl3.cpp  main.cpp
